[package]
name = "cargo-util"
version = "0.2.15"
rust-version = "1.80" # MSRV:1
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Miscellaneous support code used by Cargo."

[dependencies]
anyhow.workspace = true
filetime.workspace = true
hex.workspace = true
ignore.workspace = true
jobserver.workspace = true
same-file.workspace = true
sha2.workspace = true
shell-escape.workspace = true
tempfile.workspace = true
tracing.workspace = true
walkdir.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
miow.workspace = true
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Console"] }
# HACKS HACKS HACKS
sysinfo = { version = "0.31.2", default-features = false, features = ["system"] }

# MOAR HACKS
[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem",
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_System_WindowsProgramming",
]

[lints]
workspace = true
